--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,5 @@
-<h1>Aboutページ</h1>
+<div class="container">
+  <div class="row mt-3">
+    <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
+  </div>
+</div>
