--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2 class="mt-3">User info</h2>
+      <%= image_tag @user.get_image %>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row">name</th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th scope="row">introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block mt-4" do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @new_book do |f| %>
+        <div class="mb-3">
+          <%= f.label :title, class: "form-label" %><br>
+          <%= f.text_field :title, class: "form-control" %>
+        </div>  
+        <div class="mb-3">
+          <%= f.label :opinion, class: "form-label" %><br>
+          <%= f.text_area :opinion, class: "form-control" %>
+        </div>
+        <%= f.submit "Create Book", class: "btn btn-success" %>
+      <% end %>
+    </div>
+  </div>
+</div>
