--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h2 class="mt-3">User info</h2>
-      <%= image_tag @user.get_image %>
+      <%= image_tag @user.get_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
@@ -23,15 +23,45 @@
       <h2 class="mt-3">New book</h2>
       <%= form_with model: @new_book do |f| %>
         <div class="mb-3">
-          <%= f.label :title, class: "form-label" %><br>
+          <%= f.label :title, class: "form-label" %>
+          <br>
           <%= f.text_field :title, class: "form-control" %>
         </div>  
         <div class="mb-3">
-          <%= f.label :opinion, class: "form-label" %><br>
-          <%= f.text_area :opinion, class: "form-control" %>
+          <%= f.label :body, class: "form-label" do %>
+            Opinion
+          <% end %>
+          <br>
+          <%= f.text_area :body, class: "form-control" %>
         </div>
         <%= f.submit "Create Book", class: "btn btn-success" %>
       <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2 class="mt-3">Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th scope="col">Title</th>
+            <th scope="col">Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <% @books.each do |book| %>
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to user_path(current_user.id) do %>
+                  <%= image_tag current_user.get_image(80,80) %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          </tbody>
+        <% end %>
+      </table>
     </div>
   </div>
 </div>
