--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model:@book do |f| %>
+        <div class="mb-3">
+          <%= f.label :title, class: "form-label" %><br />
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= f.label :body, class: "form-label" do %>
+            Opinion
+          <% end %>
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= f.submit "Update Book", class: "btn btn-success" %>
+        </div>
+      <% end %>
+      <div>
+        <%= link_to "Show", book_path(@book.id) %> 
+        |
+        <%= link_to "Back", books_path %> 
+      </div>
+    </div>
+  </div>
+</div>
