--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,6 +14,8 @@
             </td>
             <td><%= link_to @book.title, book_path(@book.id) %></td>
             <td><%= @book.body %></td>
+            <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success btn-sm" %></td>
+            <td><%= link_to "Destroy", method: :delete, class: "btn btn-warning btn-sm" %></td>
           </tr>
         </tbody>
       </table>
