--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,8 +14,10 @@
             </td>
             <td><%= link_to @book.title, book_path(@book.id) %></td>
             <td><%= @book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success btn-sm" %></td>
-            <td><%= link_to "Destroy", method: :delete, class: "btn btn-warning btn-sm" %></td>
+            <% if @book.user_id == current_user.id %>
+              <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success btn-sm" %></td>
+              <td><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "正気ですか?", class: "btn btn-danger btn-sm" %></td>
+            <% end %>
           </tr>
         </tbody>
       </table>
