--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model:@user do |f| %>
+        <div class="mb-3">
+          <%= f.label :name, class: "form-label" %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= f.label :image %><br />
+          <%= f.file_field :image, placeholder: "選択されていません", accept: "image/*" %>  
+        </div>
+        <div class="mb-3">
+          <%= f.label :introduction, class: "form-label" %>
+          <%= f.text_area :introduction, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+          <%= f.submit "Update User", class: "btn btn-secondary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
