--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
               <tr>
                 <td><%= image_tag @user.get_image(80,80) %></td>
                 <td><%= book.title %></td>
-                <td><%= link_to "Show", user_path(@user) %></td>
+                <td><%= book.body %></td>
               </tr>
             </tbody>
           <% end %>
