--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:notice] %>
 <div class="container px-5 px-sm-0">
   <div class="row">
     <%= render 'user', user: @user, new_book: @new_book %>
