--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,16 @@
 <div class="container px-5 px-sm-0">
+  <div class="row mt-3">
+    <div class="col">
+      <% if @new_book.errors.any? %>
+      <h3><%= @new_book.errors.count %> errors prohibited this obj from being saved: </h3>
+        <ul>
+          <% @new_book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-3">
       <h2 class="mt-3">User info</h2>
