--- a/app/views/books/_books.html.erb
+++ b/app/views/books/_books.html.erb
@@ -14,7 +14,7 @@
             <tr>
               <td>
                 <%= link_to user_path(current_user.id) do %>
-                  <%= image_tag current_user.get_image(80,80) %>
+                  <%= image_tag current_user.get_profile_image(80,80) %>
                 <% end %>
               </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
