--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-md-3">
       <h2 class="mt-3">User info</h2>
-      <%= image_tag @user.get_image(100,100) %>
+      <%= image_tag @user.get_profile_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
@@ -64,8 +64,8 @@
           <tbody>
             <tr>
               <td>
-                <%= link_to user_path(current_user.id) do %>
-                  <%= image_tag current_user.get_image(80,80) %>
+                <%= link_to user_path(User.find(book.user_id)) do %>
+                  <%= image_tag User.find(book.user_id).get_profile_image(80,80) %>
                 <% end %>
               </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
