--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
           <tr>
             <td>
               <%= link_to user_path(@book.user.id) do %>
-                <%= image_tag @user.get_image(100,100) %><br>
+                <%= image_tag @user.get_profile_image(100,100) %><br>
                 <%= @user.name %>
               <% end %>
             </td>
