--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,8 +16,8 @@
           <%= f.text_field :name, class: "form-control" %>
         </div>
         <div class="mb-3">
-          <%= f.label :image %><br />
-          <%= f.file_field :image, placeholder: "選択されていません", accept: "image/*" %>  
+          <%= f.label :profile_image %><br />
+          <%= f.file_field :profile_image, placeholder: "選択されていません", accept: "image/*" %>  
         </div>
         <div class="mb-3">
           <%= f.label :introduction, class: "form-label" %>
