--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,8 +16,12 @@
           <% if @user.id == book.user_id %>
             <tbody>
               <tr>
-                <td><%= image_tag @user.get_image(80,80) %></td>
-                <td><%= book.title %></td>
+                <td>
+                  <%= link_to user_path(@user.id) do %>
+                    <%= image_tag @user.get_profile_image(80,80) %>
+                  <% end %>
+                </td>
+                <td><%= link_to book.title, book_path(book.id) %></td>
                 <td><%= book.body %></td>
               </tr>
             </tbody>
