--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -70,6 +70,24 @@
               </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
+              <td>
+                <% if book.favorited_by?(current_user) %>
+                  <p>
+                    <%= link_to book_favorites_path(book), class: 'text-danger card-link', method: :delete do %>
+                      <i class="fas fa-heart"></i>
+                      <%= book.favorites.count %>
+                    <% end %>
+                  </p>
+                  <% else %>
+                  <p>
+                    <%= link_to book_favorites_path(book), class: 'text-primary card-link', method: :post do %>
+                      <i class="fas fa-heart"></i>
+                      <%= book.favorites.count %>
+                    <% end %>
+                  </p>
+                <% end %>
+              </td>
+              <td style="white-space: nowrap;">コメント数：<%= book.book_comments.count %></td>
             </tr>
           </tbody>
         <% end %>
