--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,13 +15,50 @@
             </td>
             <td><%= link_to @book.title, book_path(@book.id) %></td>
             <td><%= @book.body %></td>
+            <td>
+              <% if @book.favorited_by?(current_user) %>
+                <p>
+                  <%= link_to book_favorites_path(@book), class: 'text-danger card-link', method: :delete do %>
+                    <i class="fas fa-heart"></i>
+                    <%= @book.favorites.count %>
+                  <% end %>
+                </p>
+                <% else %>
+                <p>
+                  <%= link_to book_favorites_path(@book), class: 'text-primary card-link', method: :post do %>
+                    <i class="fas fa-heart"></i>
+                    <%= @book.favorites.count %>
+                  <% end %>
+                </p>
+              <% end %>
+            <td style="white-space: nowrap;">コメント数：<%= @book.book_comments.count %></td>
+            </td>
             <% if @book.user_id == current_user.id %>
               <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-success btn-sm" %></td>
               <td><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "正気ですか?", class: "btn btn-danger btn-sm" %></td>
             <% end %>
           </tr>
+          <% @book.book_comments.each do |comment| %>
+          <% comment_user = User.find(comment.user_id) %>
+          <tr>
+            <td>
+              <%= image_tag comment_user.get_profile_image(80,80) %> <br />
+              <%= link_to comment_user.name,user_path(comment_user.id) %>
+            </td>
+            <td><%= comment.comment %></td>
+            <% if comment.user_id == current_user.id %>
+              <td><%= link_to "Destroy", book_book_comment_path(comment.book, comment), method: :delete, class: "btn btn-danger btn-sm" %></td>
+            <% end %>
+          </tr>
+          <% end %>
         </tbody>
       </table>
+      <%= form_with model: [@book, @book_comment], url: book_book_comments_path(@book) do |f| %>
+        <div class="input-group mb-3">
+          <%= f.text_area :comment, class: "form-control" %>
+        </div>
+        <%= f.submit "送信" %>
+      <% end %>
     </div>
   </div>
 </div>
